[package]
name = "pinterface"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.25"
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
rppal = "0.17.1"

[dependencies.image]
version = "0.25"
default-features = false

[dependencies.imageproc]
version = "0.24.0"
default-features = false
features = ["rayon"]
