[package]
name = "pinterface"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.25"
chrono = "0.4.38"
cosmic-text = "0.11.2"
dotenv = "0.15.0"
log = "0.4.21"
markdown = "1.0.0-alpha.17"
pretty_env_logger = "0.5.0"
regex = "1.10.4"
rppal = "0.17.1"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"

[dependencies.clap]
version = "4.5.4"
features = ["derive"]

[dependencies.image]
version = "0.25"
default-features = false

[dependencies.imageproc]
version = "0.24.0"
default-features = false
features = ["rayon"]
